# sonar-client

./: .env.example  README.md  pyproject.toml  requirements.txt  setup.py
docs/: ALLOCATED_IPS_README.md  DIRECT_BDC_IMPORT_README.md  IP_UTILIZATION_README.md  NETWORK_INFO_README.md  NETWORK_SCRIPTS_README.md  OPTIMIZED_BDC_CACHE_README.md  SCHEMA_MIGRATION_README.md  Sonar-V2.md  account_addresses.md  account_billing.md  account_call_logs.md  account_call_records.md  account_contacts.md  account_data_usage.md  account_dids.md  account_inventory.md  account_invoices.md  account_ip_addresses.md  account_payment_methods.md  account_services.md  account_tax_overrides.md  account_transactions.md  accounts.md  accounts_json.md  address_lists.md  alerting_rotations.md  bdc_cache_json_endpoints.md  cdrs.md  contracts.md  custom_fields.md  customer_portal.md  data.md  dhcp-servers.md  dhcp_server_identifiers.md  dhcp_servers.md  dids.md  direct_json_endpoints.md  endpoints_temp.txt  files.md  financial.md  (+42 more)
examples/: basic_usage.py  migration_example.py
sonar_client/: __init__.py  core.py
tests/: test_compatibility.py
